# UA3REO-DDC-Transceiver

./: .gitmodules
FPGA/: DEBUG.sopcinfo  DEBUG2.qsys  DEBUG2.sopcinfo  Debug_Probes.spf  IQ_CLK.bsf  IQ_CLK.ppf  IQ_CLK.qip  IQ_CLK.v  MAIN_PLL.bsf  MAIN_PLL.v  VCXO_PLL.bsf  VCXO_PLL.ppf  VCXO_PLL.v  WOLF.bdf  WOLF.qsf  clock_buffer.sopcinfo  nco.sopcinfo  rx_cic.sopcinfo  spi32_interface.bsf  spi32_interface.v  stm32_interface.bsf  stm32_interface.v  tx_cic.sopcinfo  tx_nco.sopcinfo
FPGA/DEBUG2/: DEBUG2.html  DEBUG2.xml
FPGA/DEBUG2/synthesis/: DEBUG2.debuginfo  DEBUG2.qip
STM32/: CMakeLists.txt  WOLF.ioc
STM32/Inc/: main.h  stm32h7xx_it.h
STM32/MDK-ARM/: WOLF.uvoptx  WOLF.uvprojx
STM32/Src/: CMakeLists.txt  fpga.c  fpga.h  functions.h  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  trx_manager.h
STM32/Src/BiquadDesigner/: CMakeLists.txt
STM32/Src/FT8/: CMakeLists.txt
STM32/Src/JPEG/: CMakeLists.txt
STM32/Src/USBDevice/: CMakeLists.txt
STM32/WOLF/: CMakeLists.txt
STM32/WOLF/Drivers/: CMakeLists.txt
STM32/WOLF/Drivers/STM32H7xx_HAL_Driver/Src/: CMakeLists.txt
STM32/WOLF/GCC/: CMakeLists.txt  STM32H743VITX_FLASH.ld  startup_stm32h743vitx.s
STM32/WOLF/Middlewares/: CMakeLists.txt
STM32/WOLF/Src/: CMakeLists.txt
STM32/cmake/: RA8875_GT911.cmake  STM32H743xx_HAL_PARA.cmake  gcc-arm-none-eabi.cmake
